--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ select = [
   "E", "F", "W", # flake8
   "B",  "B904",  # flake8-bugbear
   "I",           # isort
+  "N",           # pep8-naming
   "ARG",         # flake8-unused-arguments
   "C4",          # flake8-comprehensions
   "EM",          # flake8-errmsg
@@ -91,5 +92,4 @@ line-length = 120
 isort.known-first-party = ["env", "pybind11_cross_module_tests", "pybind11_tests"]
 
 [tool.ruff.per-file-ignores]
-"tests/**" = ["EM"]
-"tests/test_enum.py" = ["SIM201", "SIM300", "SIM202"]
+"tests/**" = ["EM", "N"]
