--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -74,6 +74,7 @@ repos:
   hooks:
   - id: ruff
     args: ["--fix", "--show-fixes"]
+    exclude: ^(ubench/holder_comparison\.py|ubench/holder_comparison_extract_sheet_data\.py)$
 
 # Checking for common mistakes
 - repo: https://github.com/pre-commit/pygrep-hooks
