--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -101,10 +101,10 @@ jobs:
       uses: pypa/gh-action-pypi-publish@v1.8.1
       with:
         password: ${{ secrets.pypi_password }}
-        packages_dir: standard/
+        packages-dir: standard/
 
     - name: Publish global package
       uses: pypa/gh-action-pypi-publish@v1.8.1
       with:
         password: ${{ secrets.pypi_password_global }}
-        packages_dir: global/
+        packages-dir: global/
