--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,7 +51,7 @@ repos:
   hooks:
   - id: blacken-docs
     additional_dependencies:
-    - black==23.1.0 # keep in sync with black hook
+    - black==23.3.0 # keep in sync with black hook
 
 # Changes tabs to spaces
 - repo: https://github.com/Lucas-C/pre-commit-hooks
@@ -68,7 +68,7 @@ repos:
 
 # Ruff, the Python auto-correcting linter written in Rust
 - repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: v0.0.260
+  rev: v0.0.261
   hooks:
   - id: ruff
     args: ["--fix", "--show-fixes"]
@@ -124,7 +124,7 @@ repos:
   hooks:
   - id: codespell
     exclude: ".supp$"
-    args: ["-x", ".codespell-ignore-lines"]
+    args: ["-x.codespell-ignore-lines", "-Lccompiler"]
 
 # Check for common shell mistakes
 - repo: https://github.com/shellcheck-py/shellcheck-py
