Update ci.yml to read all
Signed-off-by: Joyce <joycebrum@google.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,7 @@ on:
       - stable
       - v*
 
-permissions:
-  contents: read
+permissions: read-all
 
 concurrency:
   group: test-${{ github.ref }}
