markdown-it-py dropped Python 3.7 support, but we are type checking for Python 3.7 from a newer version of Python. Keep using markdown-it-py<3 as long as we support Python 3.7.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -105,7 +105,10 @@ repos:
   - id: mypy
     args: []
     exclude: ^(tests|docs)/
-    additional_dependencies: [nox, rich]
+    additional_dependencies:
+    - markdown-it-py<3 # Drop this together with dropping Python 3.7 support.
+    - nox
+    - rich
 
 # Checks the manifest for missing files (native support)
 - repo: https://github.com/mgedmin/check-manifest
