--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -12,6 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  PIP_BREAK_SYSTEM_PACKAGES: 1
   PIP_ONLY_BINARY: ":all:"
   # For cmake:
   VERBOSE: 1
