--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -455,17 +455,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        container_suffix:
+          - ""
         include:
           - { gcc: 7, std: 11 }
           - { gcc: 7, std: 17 }
           - { gcc: 8, std: 14 }
           - { gcc: 8, std: 17 }
-          - { gcc: 10, std: 17 }
+          - { gcc: 10, std: 17, container_suffix: "-bullseye" }
           - { gcc: 11, std: 20 }
           - { gcc: 12, std: 20 }
 
     name: "🐍 3 • GCC ${{ matrix.gcc }} • C++${{ matrix.std }}• x64"
-    container: "gcc:${{ matrix.gcc }}"
+    container: "gcc:${{ matrix.gcc }}${{ matrix.container_suffix }}"
 
     steps:
     - uses: actions/checkout@v3
