--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -643,8 +643,8 @@ jobs:
       uses: actions/checkout@v4
       if: matrix.container != 'centos:7'
 
-    - name: Ancient actions/checkout required for centos:7
-      uses: actions/checkout@v1
+    - name: Pin actions/checkout as required for centos:7
+      uses: actions/checkout@v3
       if: matrix.container == 'centos:7'
 
     - name: Add Python 3 (RHEL 7)
